image overflow fixed

--- a/folham/src/Container/Home/home.css
+++ b/folham/src/Container/Home/home.css
@@ -116,15 +116,14 @@ img {
 }
 .company_history-img img {
   width: 400px;
+  overflow: hidden;
 }
 .numbers {
   background: var(--color-orange-yellow);
-  width: 100%;
 }
 .numbers_container {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  /* display: flex;
+  align-items: center; */
 }
 
 .numbers_stat {
@@ -239,10 +238,11 @@ img {
     font-size: 16px;
     font-weight: 100;
   }
+  .numbers {
+    max-width: 100%;
+  }
   .numbers_container {
     flex-direction: column;
-    align-items: flex-start;
-    padding: 20px 0;
   }
   .numbers_stat {
     border: none;
